fix z-index bug

--- a/src/less/fo-tooltip.less
+++ b/src/less/fo-tooltip.less
@@ -5,6 +5,7 @@
   padding: 15px;
   background: #000;
   color: #fff;
+  z-index: 1000;
   &.open {
     display: inline-block;
   }
